# uniprot-rdf

./: .gitignore  README.md  dvc.yaml  pyproject.toml
stages/: 01_download.py  02_convert.sh
