[project]
name = "uniprot-rdf"
version = "0.1.0"
description = "UniProt RDF complete dump as a BioBrick"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "tqdm>=4.66.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]
